# aws_flask_swagger_ui

./: .flake8  CONTRIBUTING.md  README.md  example.py  rebuild_pip_freeze.ps1  requirements.txt  setup.cfg  setup.py  update-dist.sh
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: py-publish.yml  remove-old-artifacts.yml  tests.yml
aws_flask_swagger_ui/: __init__.py  aws_api_gateway_docu.py  flask_aws_lambda.py  flask_swagger_ui.py
aws_flask_swagger_ui/templates/: index.template.html
events/: http_api_event.json  rest_api_event.json
tests/: test_flask_aws.py  test_flask_swagger.py
