[metadata]
name = aws-flask-swagger-ui
version = 1.1.9
author= Tobias Bruckert
url=https://github.com/tb102122/aws_flask_swagger_ui
keywords=flask aws amazon lambda swagger
description = Swagger UI Blueprint for Flask on AWS Lambda
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License

[options]
packages=find:
zip_safe = False
include_package_data = True
install_requires = Flask
[options.package_data]
* = LICENSE, README.md, templates/*.html, dist/VERSION, dist/LICENSE, dist/README.md, dist/*.html, dist/*.js, dist/*.css, dist/*.png, dist/*.map